<resources>
    <string name="app_name">Calculator</string>
    <string name="big_textview">Big TextView</string>
    <string name="hello_world">Hello World</string>
    <string name="what_s_up">What\'s Up?</string>
    <string name="bye">Bye!</string>
    <string name="decrement" translatable="false">Decrement</string>
    <string name="increment" translatable="false">Increment</string>
</resources>
