<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        android:gravity="bottom|start"
        android:text="@string/big_textview"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size" />

    <ImageView
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_height"
        android:layout_gravity="center|start"
        android:scaleType="centerCrop"
        android:src="@drawable/img" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:text="@string/hello_world"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|end"
        android:background="@color/brown"
        android:text="@string/what_s_up"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bye"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size" />

    <ImageView
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_height"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/string_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Button 1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Button 2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Button 3" />


    </LinearLayout>

</LinearLayout>