<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <TextView
        android:id="@+id/tvHelloWorld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/hello_world"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size" />


    <ImageView
        android:id="@+id/ivString"
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_height"
        android:layout_below="@id/tvHelloWorld"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:src="@drawable/string_1" />

    <Button
        android:id="@+id/btnDecrement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tvHelloWorld"
        android:layout_toStartOf="@id/tvHelloWorld"
        android:layout_toLeftOf="@id/tvHelloWorld"
        android:text="@string/decrement" />

    <Button
        android:id="@+id/btnIncrement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tvHelloWorld"
        android:layout_toEndOf="@id/tvHelloWorld"
        android:layout_toRightOf="@id/tvHelloWorld"
        android:text="@string/increment" />

    <ImageView
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_height"
        android:layout_above="@id/btnDecrement"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:src="@drawable/img" />

</RelativeLayout>